# murano-plugin-networking-sfc

./: .gitignore  .gitreview  .zuul.yaml  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
DemoApp/Classes/: DemoApp.yaml
doc/source/: conf.py
example/DemoApp/: manifest.yaml
example/DemoApp/Classes/: DemoApp.yaml
example/DemoApp/UI/: ui.yaml
example/SfcDemoApp/: manifest.yaml
example/SfcDemoApp/Classes/: SfcDemoApp.yaml
example/SfcDemoApp/Resources/: SFCDemo.template
example/SfcDemoApp/Resources/scripts/: runSFCDemoDeploy.sh
example/SfcDemoApp/UI/: ui.yaml
example/SfcDemoSniff/: manifest.yaml
example/SfcDemoSniff/Classes/: SFCDemo.yaml
example/SfcDemoSniff/Resources/: SFCDemo.template
example/SfcDemoSniff/UI/: ui.yaml
example/SfcTestApp/: manifest.yaml
example/SfcTestApp/Classes/: SfcTestApp.yaml
example/SfcTestApp/UI/: ui.yaml
murano_plugin_networking_sfc/: __init__.py  client.py  common.py  config.py  error.py  resource.py
murano_plugin_networking_sfc/tests/unit/: test_client.py  test_common.py  test_resource.py
networking_sfc_library/: manifest.yaml  metadata.yaml
networking_sfc_library/Classes/: FloatingIp.yaml  FlowClassifier.yaml  Instance.yaml  InstanceTest.yaml  NeutronPort.yaml  PortChain.yaml  PortPair.yaml  PortPairGroup.yaml
networking_sfc_library/Classes/NetSFC/: FlowClassifier.yaml  NeutronPort.yaml  PortChain.yaml  PortPair.yaml  PortPairGroup.yaml  SFCInstance.yaml
networking_sfc_library/Resources/: env.json
