[metadata]
version = 1.0
name = murano-plugin-networking-sfc
description = Networking SFC plugin for Murano
summary = This plugin implements support of Networking SFC Neutron
          extension API.
author = Alexander Sapprykin
author-email = asaprykin@mirantis.com

[files]
packages = murano_plugin_networking_sfc

[entry_points]
io.murano.extensions =
    networking_sfc.NetworkingSFCClient = murano_plugin_networking_sfc:NetworkingSFCClient

