[metadata]
name = murano-plugin-networking-sfc
version = 1.0
description = Networking SFC plugin for Murano
summary = This plugin implements support of Networking SFC Neutron
          extension API.
author = Mirantis, Inc

[files]
packages = murano_plugin_networking_sfc

[entry_points]
io.murano.extensions =
    networking_sfc.NetworkingSfcClient = murano_plugin_networking_sfc:NetworkingSfcClient
